--- a/source/_sass/_speaker.scss
+++ b/source/_sass/_speaker.scss
@@ -57,7 +57,7 @@
 
     p {
       @include breakpoint($small-only) {
-        text-align: justify;
+        text-align: left;
       }
       color: rgba(0, 0, 0, 0.8);
       margin: 0;
